# properties-prices-register

./: .flake8  .gitignore  .mdl_config.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: main.yml
docker/dev/: Dockerfile  entrypoint.sh
infrastructure/: Makefile  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infrastructure/infrastructure/: database_stack.py  dns_stack.py  fargate_portal_stack.py  fargate_service_stack.py  fargate_workers_stack.py  network_stack.py  queue_stack.py  s3_stack.py  secrets_stack.py
infrastructure/tests/: test_database_stack copy 2.py  test_fargate_service_stack.py  test_fargate_workers_stack.py  test_network_stack.py  test_queue_stack.py  test_s3_stack.py
portal/: .eslintrc.json  Makefile  docker-compose.dev.yaml  package-lock.json  package.json  tailwind.config.js
portal/app/: globals.css  layout.tsx  page.tsx
portal/app/about/: page.tsx
portal/app/api/: page.tsx
portal/app/components/: ClearFilters.tsx  CurrentRefinements.tsx  EmptyFilters.tsx  EmptyHits.tsx  Filter.tsx  Filters.tsx  FiltersFooter.tsx  Footer.tsx  Graph.tsx  Header.tsx  Hit.tsx  HitClips.tsx  Hits.tsx  Refinements.tsx  Search.tsx  SearchBar.tsx  SearchCurrentRefinements.tsx  SearchFilter.tsx  SearchFilters.tsx  SearchGraph.tsx  SearchHit.tsx  SearchHitClips.tsx
portal/app/components/assets/: no-results-lottie.json
portal/app/services/: stats.service.ts
portal/app/types/models/: index.ts
portal/app/types/services/: index.ts
portal/docker/: Dockerfile
portal/pages/api/: health.ts
ppr/: celery.py  settings.py  urls.py  wsgi.py
properties/: functions.py  models.py  tasks.py  urls.py  views.py
properties/migrations/: 0001_initial.py  0002_alter_property_price.py  0003_alter_property_administrative_area_level_1_and_more.py
scripts/: Makefile  README.md  pyproject.toml
scripts/algolia/: reindex.py
service/: Makefile  README.md  docker-compose.dev.yaml  manage.py  pyproject.toml
service/docker/: Dockerfile  entrypoint.sh
service/ppr/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
service/properties/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
service/properties/migrations/: 0001_initial.py  0002_remove_property_google_place_id_and_more.py  0002_remove_property_street_address_and_more.py  0003_alter_property_digest.py  0004_alter_property_digest.py  0005_alter_property_latitude_alter_property_longitude.py
service/properties/tests/: test_models.py  test_signals.py  test_tasks.py  test_utils.py  test_views.py
