[tool.poetry]
name = "properties-prices-register"
version = "0.1.0"
description = ""
authors = ["Lucio Tudisco <lucio.tudisco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
